exports[`ScrolledList DOM rendering renders correctly all item alignments 1`] = `
<div
  className="container ">
  <div
    className="eyeshot">
    <div
      className="bar">
      <div
        className="item selected"
        onClick={[Function]}>
        <div>
          1
        </div>
        <i
          className="KambiWidget-primary-background-color border" />
      </div>
      <div
        className="item "
        onClick={[Function]}>
        <div>
          2
        </div>
        <i
          className="KambiWidget-primary-background-color border" />
      </div>
    </div>
  </div>
  <button
    className="left"
    disabled={true}
    onClick={[Function]}
    style={
      Object {
        "background": "linear-gradient(90deg,  50%, rgba(255, 255, 255, 0))",
      }
    }>
    <svg
      className="icon"
      height="17px"
      version="1.1"
      viewBox="0 860 420 500"
      width="10px"
      xmlns="http://www.w3.org/2000/svg">
      <path
        d="M358.286 640q0-7.429-5.714-13.143l-224.571-224.571 224.571-224.571q5.714-5.714 5.714-13.143t-5.714-13.143l-28.571-28.571q-5.714-5.714-13.143-5.714t-13.143 5.714l-266.286 266.286q-5.714 5.714-5.714 13.143t5.714 13.143l266.286 266.286q5.714 5.714 13.143 5.714t13.143-5.714l28.571-28.571q5.714-5.714 5.714-13.143z"
        id="arrowLeft"
        transform="scale(1, -1) translate(0, -1500)" />
    </svg>
  </button>
  <button
    className="right"
    disabled={true}
    onClick={[Function]}
    style={
      Object {
        "background": "linear-gradient(270deg,  50%, rgba(255, 255, 255, 0))",
      }
    }>
    <svg
      className="icon"
      height="17px"
      version="1.1"
      viewBox="0 860 420 500"
      width="10px"
      xmlns="http://www.w3.org/2000/svg">
      <path
        d="M358.286 640q0-7.429-5.714-13.143l-224.571-224.571 224.571-224.571q5.714-5.714 5.714-13.143t-5.714-13.143l-28.571-28.571q-5.714-5.714-13.143-5.714t-13.143 5.714l-266.286 266.286q-5.714 5.714-5.714 13.143t5.714 13.143l266.286 266.286q5.714 5.714 13.143 5.714t13.143-5.714l28.571-28.571q5.714-5.714 5.714-13.143z"
        id="arrowLeft"
        transform="scale(1, -1) translate(0, -1500)" />
    </svg>
  </button>
</div>
`;

exports[`ScrolledList DOM rendering renders correctly all item alignments 2`] = `
<div
  className="container ">
  <div
    className="eyeshot">
    <div
      className="bar">
      <div
        className="item selected"
        onClick={[Function]}>
        <div>
          1
        </div>
        <i
          className="KambiWidget-primary-background-color border" />
      </div>
      <div
        className="item "
        onClick={[Function]}>
        <div>
          2
        </div>
        <i
          className="KambiWidget-primary-background-color border" />
      </div>
    </div>
  </div>
  <button
    className="left"
    disabled={true}
    onClick={[Function]}
    style={
      Object {
        "background": "linear-gradient(90deg,  50%, rgba(255, 255, 255, 0))",
      }
    }>
    <svg
      className="icon"
      height="17px"
      version="1.1"
      viewBox="0 860 420 500"
      width="10px"
      xmlns="http://www.w3.org/2000/svg">
      <path
        d="M358.286 640q0-7.429-5.714-13.143l-224.571-224.571 224.571-224.571q5.714-5.714 5.714-13.143t-5.714-13.143l-28.571-28.571q-5.714-5.714-13.143-5.714t-13.143 5.714l-266.286 266.286q-5.714 5.714-5.714 13.143t5.714 13.143l266.286 266.286q5.714 5.714 13.143 5.714t13.143-5.714l28.571-28.571q5.714-5.714 5.714-13.143z"
        id="arrowLeft"
        transform="scale(1, -1) translate(0, -1500)" />
    </svg>
  </button>
  <button
    className="right"
    disabled={true}
    onClick={[Function]}
    style={
      Object {
        "background": "linear-gradient(270deg,  50%, rgba(255, 255, 255, 0))",
      }
    }>
    <svg
      className="icon"
      height="17px"
      version="1.1"
      viewBox="0 860 420 500"
      width="10px"
      xmlns="http://www.w3.org/2000/svg">
      <path
        d="M358.286 640q0-7.429-5.714-13.143l-224.571-224.571 224.571-224.571q5.714-5.714 5.714-13.143t-5.714-13.143l-28.571-28.571q-5.714-5.714-13.143-5.714t-13.143 5.714l-266.286 266.286q-5.714 5.714-5.714 13.143t5.714 13.143l266.286 266.286q5.714 5.714 13.143 5.714t13.143-5.714l28.571-28.571q5.714-5.714 5.714-13.143z"
        id="arrowLeft"
        transform="scale(1, -1) translate(0, -1500)" />
    </svg>
  </button>
</div>
`;

exports[`ScrolledList DOM rendering renders correctly all item alignments 3`] = `
<div
  className="container ">
  <div
    className="eyeshot">
    <div
      className="bar">
      <div
        className="item selected"
        onClick={[Function]}>
        <div>
          1
        </div>
        <i
          className="KambiWidget-primary-background-color border" />
      </div>
      <div
        className="item "
        onClick={[Function]}>
        <div>
          2
        </div>
        <i
          className="KambiWidget-primary-background-color border" />
      </div>
    </div>
  </div>
  <button
    className="left"
    disabled={true}
    onClick={[Function]}
    style={
      Object {
        "background": "linear-gradient(90deg,  50%, rgba(255, 255, 255, 0))",
      }
    }>
    <svg
      className="icon"
      height="17px"
      version="1.1"
      viewBox="0 860 420 500"
      width="10px"
      xmlns="http://www.w3.org/2000/svg">
      <path
        d="M358.286 640q0-7.429-5.714-13.143l-224.571-224.571 224.571-224.571q5.714-5.714 5.714-13.143t-5.714-13.143l-28.571-28.571q-5.714-5.714-13.143-5.714t-13.143 5.714l-266.286 266.286q-5.714 5.714-5.714 13.143t5.714 13.143l266.286 266.286q5.714 5.714 13.143 5.714t13.143-5.714l28.571-28.571q5.714-5.714 5.714-13.143z"
        id="arrowLeft"
        transform="scale(1, -1) translate(0, -1500)" />
    </svg>
  </button>
  <button
    className="right"
    disabled={true}
    onClick={[Function]}
    style={
      Object {
        "background": "linear-gradient(270deg,  50%, rgba(255, 255, 255, 0))",
      }
    }>
    <svg
      className="icon"
      height="17px"
      version="1.1"
      viewBox="0 860 420 500"
      width="10px"
      xmlns="http://www.w3.org/2000/svg">
      <path
        d="M358.286 640q0-7.429-5.714-13.143l-224.571-224.571 224.571-224.571q5.714-5.714 5.714-13.143t-5.714-13.143l-28.571-28.571q-5.714-5.714-13.143-5.714t-13.143 5.714l-266.286 266.286q-5.714 5.714-5.714 13.143t5.714 13.143l266.286 266.286q5.714 5.714 13.143 5.714t13.143-5.714l28.571-28.571q5.714-5.714 5.714-13.143z"
        id="arrowLeft"
        transform="scale(1, -1) translate(0, -1500)" />
    </svg>
  </button>
</div>
`;

exports[`ScrolledList DOM rendering renders correctly all item alignments 4`] = `
<div
  className="container ">
  <div
    className="eyeshot">
    <div
      className="bar">
      <div
        className="item selected"
        onClick={[Function]}>
        <div>
          1
        </div>
        <i
          className="KambiWidget-primary-background-color border" />
      </div>
      <div
        className="item "
        onClick={[Function]}>
        <div>
          2
        </div>
        <i
          className="KambiWidget-primary-background-color border" />
      </div>
    </div>
  </div>
  <button
    className="left"
    disabled={true}
    onClick={[Function]}
    style={
      Object {
        "background": "linear-gradient(90deg,  50%, rgba(255, 255, 255, 0))",
      }
    }>
    <svg
      className="icon"
      height="17px"
      version="1.1"
      viewBox="0 860 420 500"
      width="10px"
      xmlns="http://www.w3.org/2000/svg">
      <path
        d="M358.286 640q0-7.429-5.714-13.143l-224.571-224.571 224.571-224.571q5.714-5.714 5.714-13.143t-5.714-13.143l-28.571-28.571q-5.714-5.714-13.143-5.714t-13.143 5.714l-266.286 266.286q-5.714 5.714-5.714 13.143t5.714 13.143l266.286 266.286q5.714 5.714 13.143 5.714t13.143-5.714l28.571-28.571q5.714-5.714 5.714-13.143z"
        id="arrowLeft"
        transform="scale(1, -1) translate(0, -1500)" />
    </svg>
  </button>
  <button
    className="right"
    disabled={true}
    onClick={[Function]}
    style={
      Object {
        "background": "linear-gradient(270deg,  50%, rgba(255, 255, 255, 0))",
      }
    }>
    <svg
      className="icon"
      height="17px"
      version="1.1"
      viewBox="0 860 420 500"
      width="10px"
      xmlns="http://www.w3.org/2000/svg">
      <path
        d="M358.286 640q0-7.429-5.714-13.143l-224.571-224.571 224.571-224.571q5.714-5.714 5.714-13.143t-5.714-13.143l-28.571-28.571q-5.714-5.714-13.143-5.714t-13.143 5.714l-266.286 266.286q-5.714 5.714-5.714 13.143t5.714 13.143l266.286 266.286q5.714 5.714 13.143 5.714t13.143-5.714l28.571-28.571q5.714-5.714 5.714-13.143z"
        id="arrowLeft"
        transform="scale(1, -1) translate(0, -1500)" />
    </svg>
  </button>
</div>
`;

exports[`ScrolledList DOM rendering renders correctly all item alignments 5`] = `
<div
  className="container ">
  <div
    className="eyeshot">
    <div
      className="bar">
      <div
        className="item selected"
        onClick={[Function]}>
        <div>
          1
        </div>
        <i
          className="KambiWidget-primary-background-color border" />
      </div>
      <div
        className="item "
        onClick={[Function]}>
        <div>
          2
        </div>
        <i
          className="KambiWidget-primary-background-color border" />
      </div>
    </div>
  </div>
  <button
    className="left"
    disabled={true}
    onClick={[Function]}
    style={
      Object {
        "background": "linear-gradient(90deg,  50%, rgba(255, 255, 255, 0))",
      }
    }>
    <svg
      className="icon"
      height="17px"
      version="1.1"
      viewBox="0 860 420 500"
      width="10px"
      xmlns="http://www.w3.org/2000/svg">
      <path
        d="M358.286 640q0-7.429-5.714-13.143l-224.571-224.571 224.571-224.571q5.714-5.714 5.714-13.143t-5.714-13.143l-28.571-28.571q-5.714-5.714-13.143-5.714t-13.143 5.714l-266.286 266.286q-5.714 5.714-5.714 13.143t5.714 13.143l266.286 266.286q5.714 5.714 13.143 5.714t13.143-5.714l28.571-28.571q5.714-5.714 5.714-13.143z"
        id="arrowLeft"
        transform="scale(1, -1) translate(0, -1500)" />
    </svg>
  </button>
  <button
    className="right"
    disabled={true}
    onClick={[Function]}
    style={
      Object {
        "background": "linear-gradient(270deg,  50%, rgba(255, 255, 255, 0))",
      }
    }>
    <svg
      className="icon"
      height="17px"
      version="1.1"
      viewBox="0 860 420 500"
      width="10px"
      xmlns="http://www.w3.org/2000/svg">
      <path
        d="M358.286 640q0-7.429-5.714-13.143l-224.571-224.571 224.571-224.571q5.714-5.714 5.714-13.143t-5.714-13.143l-28.571-28.571q-5.714-5.714-13.143-5.714t-13.143 5.714l-266.286 266.286q-5.714 5.714-5.714 13.143t5.714 13.143l266.286 266.286q5.714 5.714 13.143 5.714t13.143-5.714l28.571-28.571q5.714-5.714 5.714-13.143z"
        id="arrowLeft"
        transform="scale(1, -1) translate(0, -1500)" />
    </svg>
  </button>
</div>
`;

exports[`ScrolledList DOM rendering renders correctly custom ItemContainer 1`] = `
<div
  className="container ">
  <div
    className="eyeshot">
    <div
      className="bar">
      <div>
        <div>
          1
        </div>
      </div>
      <div>
        <div>
          2
        </div>
      </div>
    </div>
  </div>
  <button
    className="left"
    disabled={true}
    onClick={[Function]}
    style={
      Object {
        "background": "linear-gradient(90deg,  50%, rgba(255, 255, 255, 0))",
      }
    }>
    <svg
      className="icon"
      height="17px"
      version="1.1"
      viewBox="0 860 420 500"
      width="10px"
      xmlns="http://www.w3.org/2000/svg">
      <path
        d="M358.286 640q0-7.429-5.714-13.143l-224.571-224.571 224.571-224.571q5.714-5.714 5.714-13.143t-5.714-13.143l-28.571-28.571q-5.714-5.714-13.143-5.714t-13.143 5.714l-266.286 266.286q-5.714 5.714-5.714 13.143t5.714 13.143l266.286 266.286q5.714 5.714 13.143 5.714t13.143-5.714l28.571-28.571q5.714-5.714 5.714-13.143z"
        id="arrowLeft"
        transform="scale(1, -1) translate(0, -1500)" />
    </svg>
  </button>
  <button
    className="right"
    disabled={true}
    onClick={[Function]}
    style={
      Object {
        "background": "linear-gradient(270deg,  50%, rgba(255, 255, 255, 0))",
      }
    }>
    <svg
      className="icon"
      height="17px"
      version="1.1"
      viewBox="0 860 420 500"
      width="10px"
      xmlns="http://www.w3.org/2000/svg">
      <path
        d="M358.286 640q0-7.429-5.714-13.143l-224.571-224.571 224.571-224.571q5.714-5.714 5.714-13.143t-5.714-13.143l-28.571-28.571q-5.714-5.714-13.143-5.714t-13.143 5.714l-266.286 266.286q-5.714 5.714-5.714 13.143t5.714 13.143l266.286 266.286q5.714 5.714 13.143 5.714t13.143-5.714l28.571-28.571q5.714-5.714 5.714-13.143z"
        id="arrowLeft"
        transform="scale(1, -1) translate(0, -1500)" />
    </svg>
  </button>
</div>
`;

exports[`ScrolledList DOM rendering renders correctly in mobile mode with not known container width 1`] = `
<div
  className="container mobile-device">
  <div
    className="eyeshot">
    <div
      className="bar">
      <div
        className="item selected"
        onClick={[Function]}>
        <div>
          1
        </div>
        <i
          className="KambiWidget-primary-background-color border" />
      </div>
      <div
        className="item "
        onClick={[Function]}>
        <div>
          2
        </div>
        <i
          className="KambiWidget-primary-background-color border" />
      </div>
    </div>
  </div>
</div>
`;

exports[`ScrolledList DOM rendering renders correctly with default props 1`] = `
<div
  className="container ">
  <div
    className="eyeshot">
    <div
      className="bar" />
  </div>
  <button
    className="left"
    disabled={true}
    onClick={[Function]}
    style={
      Object {
        "background": "linear-gradient(90deg,  50%, rgba(255, 255, 255, 0))",
      }
    }>
    <svg
      className="icon"
      height="17px"
      version="1.1"
      viewBox="0 860 420 500"
      width="10px"
      xmlns="http://www.w3.org/2000/svg">
      <path
        d="M358.286 640q0-7.429-5.714-13.143l-224.571-224.571 224.571-224.571q5.714-5.714 5.714-13.143t-5.714-13.143l-28.571-28.571q-5.714-5.714-13.143-5.714t-13.143 5.714l-266.286 266.286q-5.714 5.714-5.714 13.143t5.714 13.143l266.286 266.286q5.714 5.714 13.143 5.714t13.143-5.714l28.571-28.571q5.714-5.714 5.714-13.143z"
        id="arrowLeft"
        transform="scale(1, -1) translate(0, -1500)" />
    </svg>
  </button>
  <button
    className="right"
    disabled={true}
    onClick={[Function]}
    style={
      Object {
        "background": "linear-gradient(270deg,  50%, rgba(255, 255, 255, 0))",
      }
    }>
    <svg
      className="icon"
      height="17px"
      version="1.1"
      viewBox="0 860 420 500"
      width="10px"
      xmlns="http://www.w3.org/2000/svg">
      <path
        d="M358.286 640q0-7.429-5.714-13.143l-224.571-224.571 224.571-224.571q5.714-5.714 5.714-13.143t-5.714-13.143l-28.571-28.571q-5.714-5.714-13.143-5.714t-13.143 5.714l-266.286 266.286q-5.714 5.714-5.714 13.143t5.714 13.143l266.286 266.286q5.714 5.714 13.143 5.714t13.143-5.714l28.571-28.571q5.714-5.714 5.714-13.143z"
        id="arrowLeft"
        transform="scale(1, -1) translate(0, -1500)" />
    </svg>
  </button>
</div>
`;

exports[`ScrolledList DOM rendering renders correctly with many child items 1`] = `
<div
  className="container ">
  <div
    className="eyeshot">
    <div
      className="bar">
      <div
        className="item selected"
        onClick={[Function]}>
        <div>
          1
        </div>
        <i
          className="KambiWidget-primary-background-color border" />
      </div>
      <div
        className="item "
        onClick={[Function]}>
        <div>
          2
        </div>
        <i
          className="KambiWidget-primary-background-color border" />
      </div>
      <div
        className="item "
        onClick={[Function]}>
        <div>
          3
        </div>
        <i
          className="KambiWidget-primary-background-color border" />
      </div>
      <div
        className="item "
        onClick={[Function]}>
        <div>
          4
        </div>
        <i
          className="KambiWidget-primary-background-color border" />
      </div>
    </div>
  </div>
  <button
    className="left"
    disabled={true}
    onClick={[Function]}
    style={
      Object {
        "background": "linear-gradient(90deg,  50%, rgba(255, 255, 255, 0))",
      }
    }>
    <svg
      className="icon"
      height="17px"
      version="1.1"
      viewBox="0 860 420 500"
      width="10px"
      xmlns="http://www.w3.org/2000/svg">
      <path
        d="M358.286 640q0-7.429-5.714-13.143l-224.571-224.571 224.571-224.571q5.714-5.714 5.714-13.143t-5.714-13.143l-28.571-28.571q-5.714-5.714-13.143-5.714t-13.143 5.714l-266.286 266.286q-5.714 5.714-5.714 13.143t5.714 13.143l266.286 266.286q5.714 5.714 13.143 5.714t13.143-5.714l28.571-28.571q5.714-5.714 5.714-13.143z"
        id="arrowLeft"
        transform="scale(1, -1) translate(0, -1500)" />
    </svg>
  </button>
  <button
    className="right"
    disabled={true}
    onClick={[Function]}
    style={
      Object {
        "background": "linear-gradient(270deg,  50%, rgba(255, 255, 255, 0))",
      }
    }>
    <svg
      className="icon"
      height="17px"
      version="1.1"
      viewBox="0 860 420 500"
      width="10px"
      xmlns="http://www.w3.org/2000/svg">
      <path
        d="M358.286 640q0-7.429-5.714-13.143l-224.571-224.571 224.571-224.571q5.714-5.714 5.714-13.143t-5.714-13.143l-28.571-28.571q-5.714-5.714-13.143-5.714t-13.143 5.714l-266.286 266.286q-5.714 5.714-5.714 13.143t5.714 13.143l266.286 266.286q5.714 5.714 13.143 5.714t13.143-5.714l28.571-28.571q5.714-5.714 5.714-13.143z"
        id="arrowLeft"
        transform="scale(1, -1) translate(0, -1500)" />
    </svg>
  </button>
</div>
`;

exports[`ScrolledList DOM rendering renders correctly with one child item 1`] = `
<div
  className="container ">
  <div
    className="eyeshot">
    <div
      className="bar">
      <div
        className="item selected"
        onClick={[Function]}>
        <div />
        <i
          className="KambiWidget-primary-background-color border" />
      </div>
    </div>
  </div>
  <button
    className="left"
    disabled={true}
    onClick={[Function]}
    style={
      Object {
        "background": "linear-gradient(90deg,  50%, rgba(255, 255, 255, 0))",
      }
    }>
    <svg
      className="icon"
      height="17px"
      version="1.1"
      viewBox="0 860 420 500"
      width="10px"
      xmlns="http://www.w3.org/2000/svg">
      <path
        d="M358.286 640q0-7.429-5.714-13.143l-224.571-224.571 224.571-224.571q5.714-5.714 5.714-13.143t-5.714-13.143l-28.571-28.571q-5.714-5.714-13.143-5.714t-13.143 5.714l-266.286 266.286q-5.714 5.714-5.714 13.143t5.714 13.143l266.286 266.286q5.714 5.714 13.143 5.714t13.143-5.714l28.571-28.571q5.714-5.714 5.714-13.143z"
        id="arrowLeft"
        transform="scale(1, -1) translate(0, -1500)" />
    </svg>
  </button>
  <button
    className="right"
    disabled={true}
    onClick={[Function]}
    style={
      Object {
        "background": "linear-gradient(270deg,  50%, rgba(255, 255, 255, 0))",
      }
    }>
    <svg
      className="icon"
      height="17px"
      version="1.1"
      viewBox="0 860 420 500"
      width="10px"
      xmlns="http://www.w3.org/2000/svg">
      <path
        d="M358.286 640q0-7.429-5.714-13.143l-224.571-224.571 224.571-224.571q5.714-5.714 5.714-13.143t-5.714-13.143l-28.571-28.571q-5.714-5.714-13.143-5.714t-13.143 5.714l-266.286 266.286q-5.714 5.714-5.714 13.143t5.714 13.143l266.286 266.286q5.714 5.714 13.143 5.714t13.143-5.714l28.571-28.571q5.714-5.714 5.714-13.143z"
        id="arrowLeft"
        transform="scale(1, -1) translate(0, -1500)" />
    </svg>
  </button>
</div>
`;

exports[`ScrolledList DOM rendering renders correctly with selected item given arbitrary 1`] = `
<div
  className="container ">
  <div
    className="eyeshot">
    <div
      className="bar">
      <div
        className="item "
        onClick={[Function]}>
        <div>
          1
        </div>
        <i
          className="KambiWidget-primary-background-color border" />
      </div>
      <div
        className="item selected"
        onClick={[Function]}>
        <div>
          2
        </div>
        <i
          className="KambiWidget-primary-background-color border" />
      </div>
    </div>
  </div>
  <button
    className="left"
    disabled={true}
    onClick={[Function]}
    style={
      Object {
        "background": "linear-gradient(90deg,  50%, rgba(255, 255, 255, 0))",
      }
    }>
    <svg
      className="icon"
      height="17px"
      version="1.1"
      viewBox="0 860 420 500"
      width="10px"
      xmlns="http://www.w3.org/2000/svg">
      <path
        d="M358.286 640q0-7.429-5.714-13.143l-224.571-224.571 224.571-224.571q5.714-5.714 5.714-13.143t-5.714-13.143l-28.571-28.571q-5.714-5.714-13.143-5.714t-13.143 5.714l-266.286 266.286q-5.714 5.714-5.714 13.143t5.714 13.143l266.286 266.286q5.714 5.714 13.143 5.714t13.143-5.714l28.571-28.571q5.714-5.714 5.714-13.143z"
        id="arrowLeft"
        transform="scale(1, -1) translate(0, -1500)" />
    </svg>
  </button>
  <button
    className="right"
    disabled={true}
    onClick={[Function]}
    style={
      Object {
        "background": "linear-gradient(270deg,  50%, rgba(255, 255, 255, 0))",
      }
    }>
    <svg
      className="icon"
      height="17px"
      version="1.1"
      viewBox="0 860 420 500"
      width="10px"
      xmlns="http://www.w3.org/2000/svg">
      <path
        d="M358.286 640q0-7.429-5.714-13.143l-224.571-224.571 224.571-224.571q5.714-5.714 5.714-13.143t-5.714-13.143l-28.571-28.571q-5.714-5.714-13.143-5.714t-13.143 5.714l-266.286 266.286q-5.714 5.714-5.714 13.143t5.714 13.143l266.286 266.286q5.714 5.714 13.143 5.714t13.143-5.714l28.571-28.571q5.714-5.714 5.714-13.143z"
        id="arrowLeft"
        transform="scale(1, -1) translate(0, -1500)" />
    </svg>
  </button>
</div>
`;
